# mav_voxblox_planning

./: .gitignore
docker/: start.sh  start_server.sh
docker/voxblox/kinetic/: Dockerfile  build_app.sh  dl-ompl.sh
docker/voxblox/kinetic-cuda/: Dockerfile  build_app.sh  install-ompl-ubuntu.sh
docker/voxblox/melodic/: Dockerfile
install/: install_https.rosinstall
mav_voxblox_planning/: package.xml
voxblox_mpc_mpnet_planner/: CMakeLists.txt  package.xml
voxblox_mpc_mpnet_planner/include/: voxblox_mpc_mpnet.h  voxblox_mpc_mpnet_planner.h
voxblox_mpc_mpnet_planner/include/motion_planners/: mpc_mpnet.hpp
voxblox_mpc_mpnet_planner/include/networks/: mpnet_cost.hpp
voxblox_mpc_mpnet_planner/include/systems/: distance_functions.h  enhanced_system.hpp  quadrotor_voxblox.hpp  system.hpp
voxblox_mpc_mpnet_planner/launch/: saved_map.launch  test.launch
voxblox_mpc_mpnet_planner/model/: train_mpnet.py
voxblox_mpc_mpnet_planner/model/dataset/: dataset.py  preprocess.py
voxblox_mpc_mpnet_planner/model/dataset/data/: voxel.txt
voxblox_mpc_mpnet_planner/model/export/: export.py  export_mpnet.py
voxblox_mpc_mpnet_planner/model/networks/: mpnet_quadrotor_voxblox.py  pnet.py  pnet_res.py  voxel_encoder_smaller.py
voxblox_mpc_mpnet_planner/model/scripts/: Validate_MPNet.ipynb
voxblox_mpc_mpnet_planner/model/training_utils/: trainer.py
voxblox_mpc_mpnet_planner/scripts/: plan.py
voxblox_mpc_mpnet_planner/src/: mpc_mpnet_planner_node.cpp  voxblox_mpc_mpnet.cpp  voxblox_mpc_mpnet_planner.cpp
voxblox_mpc_mpnet_planner/src/archive/: mpc_mpnet_wrapper.cpp
voxblox_mpc_mpnet_planner/src/motion_planners/: mpc_mpnet.cpp
voxblox_mpc_mpnet_planner/src/networks/: mpnet.cpp  mpnet_cost.cpp
voxblox_mpc_mpnet_planner/src/systems/: distance_functions.cpp  quadrotor_voxblox.cpp
voxblox_mpc_mpnet_planner/src/tests/: test_quadrotor_voxblox.cpp
voxblox_rrt_planner/launch/: rrt_saved_map.launch
voxblox_rrt_planner/scripts/: save_pts.py
voxblox_sst_planner/: CMakeLists.txt  package.xml
voxblox_sst_planner/include/voxblox_sst_planner/: voxblox_ompl_sst.h  voxblox_sst_planner.h
voxblox_sst_planner/include/voxblox_sst_planner/ompl/: mav_setup.h  ompl_types.h  ompl_voxblox.h
voxblox_sst_planner/launch/: sst_saved_map.launch
voxblox_sst_planner/scripts/: data_gen.py
voxblox_sst_planner/src/: voxblox_ompl_sst.cpp  voxblox_sst_planner.cpp  voxblox_sst_planner_node.cpp
