<?xml version="1.0"?>
<package format="2">
  <name>voxblox_mpc_mpnet_planner</name>
  <version>0.0.0</version>
  <description>
    Global planning with voxblox and mpc-mpnet.
  </description>

  <author email="lili@eng.ucsd.edu">Linjun Li</author>

  <maintainer email="lili@eng.ucsd.edu">Linjun Li</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>mav_msgs</depend>
  <depend>mav_path_smoothing</depend>
  <depend>mav_planning_common</depend>
  <depend>mav_trajectory_generation_ros</depend>
  
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>voxblox_ros</depend>

</package>
